--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@ p { /* selec all p */
 }
 
 figcaption {
-  font-weight: normal;
+  /*font-weight: normal;
   font-size: 0.75em;
   line-height: 1.5em;
-  font-family: Georgia, "New Times Roman", serif;
-
+  font-family: Georgia, "New Times Roman", serif; */
+  font: normal 0.75em/1.5em Georgia, "New Times Roman", serif;
 }
