--- a/css/style.css
+++ b/css/style.css
@@ -34,5 +34,7 @@ figcaption {
 
 .milk-text { /* This will select elements with a class attribute equal to milk-text */
   font: bold 2.6em 'Elsie Swash Caps', cursive;
-  
+  color: white;
+  text-shadow: 0 2px 3px #000
+
 }
