--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,6 @@ figcaption {
 .milk-text { /* This will select elements with a class attribute equal to milk-text */
   font: bold 2.6em 'Elsie Swash Caps', cursive;
   color: white;
-  text-shadow: 0 2px 3px #000
+  text-shadow: 0 2px 3px #000;
 
 }
