--- a/css/style.css
+++ b/css/style.css
@@ -50,5 +50,5 @@ figcaption {
   font-family: 'Clicker Script', cursive;
 }
 #logo h2 {
-  font-family: 'Clicker Script', cursive;
+  font-family: 'Elsie Swash Caps', cursive;
 }
