--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,10 @@ figcaption {
 #logo h2 {
   font-family: 'Elsie Swash Caps', cursive;
 }
+
+/* Pseudo Class Selectors */
+
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
